[package]
name = "arch_test_core"
version = "0.1.4"
edition = "2018"
authors = ["Tom Dymel <tom@dymel.dev>"]
description = "Rule based architecture test library"
license = "AGPL-3.0"
keywords = ["architecture", "test", "cargo", "subcommand"]
categories = ["development-tools", "development-tools::testing"]
repository = "https://github.com/Geigerkind/arch_test.git"
readme = "../../README.md"
include = [
    "src/",
    "architecture.json",
    "../../README.md",
    "../../LICENCE"
]

[dependencies]
velcro = "0.5.3"
ra_ap_syntax = "0.0.59"
itertools = "0.10.1"

[badges.codecov]
branch = "master"
repository = "Geigerkind/arch_test"
service = "github"