[package]
name = "cargo-archtest"
version = "0.1.8"
edition = "2018"
authors = ["Tom Dymel <tom@dymel.dev>"]
description = "CLI of arch_test_core for rule based architecture tests"
license = "AGPL-3.0"
keywords = ["architecture", "test", "plugin", "cargo", "subcommand"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins", "development-tools::testing"]
repository = "https://github.com/Geigerkind/arch_test.git"
readme = "../../README.md"
include = [
    "src/",
    "architecture.json",
    "../../README.md",
    "../../LICENCE"
]

[dependencies]
arch_test_core = { path = "../arch_test_core", version = "0.1.5" }
structopt = "0.3.21"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
cargo_toml = "0.9.2"

[badges.codecov]
branch = "master"
repository = "Geigerkind/arch_test"
service = "github"